# betting_bot

./: .gitignore  README.md  pyproject.toml
src/betting_bot/: ba_config.py  config.py  discord_bot.py  messages.py
src/betting_bot/classes/: bet_odds.py  value_detector.py
src/betting_bot/sports_api/: classes.py  resources.py
src/betting_bot/tools/: filters.py  ocr.py  parsers.py  post_generators.py  screenshot_parsers.py  utils.py  writers.py
tests/tests/classes/: test_bet_odds.py  test_value_detector.py
tests/tests/sports_api/: test_classes.py
tests/tests/tools/: test_filters.py  test_parsers.py  test_utils.py  test_writers.py
